--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
 </head>
 <body>
   <!-- Botão flutuante do WhatsApp -->
-  <a href="https://wa.me/5512997109130?text=ola%20belgas" class="whatsapp-float" target="_blank">
+  <a href="https://wa.me/5555219972462" class="whatsapp-float" target="_blank">
     <i class="fab fa-whatsapp"></i>
   </a>
 
@@ -392,7 +392,7 @@
     <h1>Concreto Usinado de Qualidade</h1>
     <p>Fornecemos concreto usinado com agilidade, preço justo e atendimento especializado para obras de todos os portes.</p>
     <div class="hero-buttons">
-      <a href="https://wa.me/5512997109130?text=ola%20belgas" class="btn" target="_blank">
+      <a href="https://wa.me/5555219972462" class="btn" target="_blank">
         <i class="fab fa-whatsapp"></i> Pedir Orçamento via WhatsApp
       </a>
       <a href="#contact" class="btn btn-secondary">
